--- a/ecs-cpp/.vscode/settings.json
+++ b/ecs-cpp/.vscode/settings.json
@@ -68,6 +68,7 @@
     "xtree": "cpp",
     "list": "cpp",
     "unordered_map": "cpp",
-    "xhash": "cpp"
+    "xhash": "cpp",
+    "span": "cpp"
   }
 }
