Cleaning up a bit of the c impl

--- a/ecs-c/.vscode/settings.json
+++ b/ecs-c/.vscode/settings.json
@@ -8,6 +8,9 @@
     "xstring": "c",
     "xtree": "c",
     "xutility": "c",
-    "sdl_stdinc.h": "c"
+    "sdl_stdinc.h": "c",
+    "algorithm": "c",
+    "locale": "c",
+    "optional": "c"
   }
 }
